# Subtitle-Generator

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: audio_extractor.py  config.py  job_manager.py  main.py  models.py  srt_formatter.py  transcriber.py
output/: 26ba0b21-a58c-4ba3-8685-08c1b82fa4cd_words.json  8051df89-e5e4-4abd-b228-c3a1a7dacb7c_words.json  f7fe3ea8-ecbe-4106-83aa-516decc170fa_words.json
static/: app.js  index.html  style.css
tests/: test_api.py  test_audio_extractor.py  test_job_manager.py  test_srt_formatter.py
